--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,5 +1,5 @@
 <form
-  class="bg-[--background] py-16 lg:px-10"
+  class="bg-[--background] py-16 px-5 lg:px-10"
   (submit)="sendEmail($event)"
   [style.--background]="background"
 >
