--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -11,7 +11,7 @@
       <h1 class="text-5xl font-extrabold text-primary">Our Work</h1>
       <hr class="bg-accent h-2 w-20 text-accent my-5 ml-2" />
       <img
-        class="h-[35%] md:h-[50%] xl:h-[85%] w-[100%]"
+        class="h-[35vh] sm:h-[55vh] md:h-[75%] lg:h-[75%] xl:h-[85%] w-[100%]"
         src="../../assets/images/gallary/project2.jpg"
         alt=""
       />
