--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -118,10 +118,10 @@
 </section>
 <!-- form -->
 <section
-  class="w-full h-full flex flex-col md:flex-row gap-20 justify-center items-center pt-16"
+  class="w-full h-full flex flex-col lg:flex-row gap-20 justify-center items-center pt-16"
   id="main2"
 >
-  <div class="w-[90%] md:w-[40%] lg:w-[40%] xl:w-[30%]">
+  <div class="w-[90%] md:w-[60%] lg:w-[40%] xl:w-[30%]">
     <hr class="bg-secondary text-secondary h-1 md:h-2 w-[80px] opacity-30" />
     <h1 class="text-4xl lg:text-7xl text-[white] font-extrabold my-10">
       Let's Build Your Dreams!
@@ -133,7 +133,7 @@
     </p>
   </div>
 
-  <div class="w-[90%] md:w-[40%] lg:w-[40%] py-24 xl:w-[30%]">
+  <div class="w-[80%] md:w-[60%] lg:w-[40%] py-24 xl:w-[30%]">
     <app-form background="#F3F1F6"></app-form>
   </div>
 </section>
