--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <!-- navbar -->
-
+<!-- landing page -->
 <div class="flex-1 flex-col flex-wrap md:px-0 w-full">
-  <section class="w-full pt-36 px-16 pb-[40%]" id="main">
+  <section class="w-full pt-36 px-16 pb-[40%] mb-10" id="main">
     <div
-      class="w-full container mx-auto p-10 flex flex-col justify-center items-center md:items-start"
+      class="max-w-[1280px] mx-auto p-10 flex flex-col justify-center items-center md:items-start"
     >
       <h3
-        class="md:text-center font-extrabold text-base md:text-xl text-secondary pt-4 pb-2"
+        class="text-center md:text-start font-extrabold text-base md:text-xl text-secondary pt-4 pb-2"
       >
         Construction Services
       </h3>
@@ -25,10 +25,12 @@
         GET A QUOTE
       </button>
     </div>
+  </section>
+  <section class="w-full px-10">
     <div
-      class="absolute mx-auto w-[80vw] bg-[#ffffff] grid grid-cols-1 md:gap-0 md:grid-cols-2 lg:grid-cols-3 my-32 md:shadow-lg"
+      class="mx-auto mt-[-100px] sm:mt-[-170px] md:mt-[-250px] lg:mt-[-300px] xl:mt-[-400px] 2xl:mt-[-550px] max-w-[1280px] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 my-32 md:shadow-lg"
     >
-      <div class="bg-accent w-[510px] min-h-[570px] px-10 py-14 shadow-lg">
+      <div class="bg-accent w-full min-h-[570px] px-10 py-14 shadow-lg">
         <h1 class="text-secondary text-3xl font-extrabold">
           Professional and Reliable Services.
         </h1>
@@ -246,13 +248,13 @@
       </div>
     </div>
   </section>
-  <section class="w-full h-[80vh] bg-accent"></section>
 </div>
 
-<section class="w-full h-full flex mt-[80%]">
-  <div class="w-1/2 h-1/4 lg:h-full" id="img1"></div>
+<!-- about -->
+<section class="w-full flex h-[60vh] lg:h-auto z-0">
+  <div class="w-1/2 h-[25vh] lg:h-[80vh] z-0" id="img1"></div>
   <div
-    class="container h-screen w-4/5 lg:w-1/2 mx-auto left-0 right-0 mr-auto ml-auto flex flex-col justify-start items-center mt-30 py-16 absolute"
+    class="bg-[transparent] z-20 w-[90vw] lg:w-[70vw] 2xl:w-[50vw] absolute mx-auto left-0 right-0 mr-auto ml-auto flex flex-col justify-start items-center mt-30 py-16"
   >
     <h1 class="text-primary text-4xl md:text-7xl font-extrabold text-center">
       About
@@ -289,10 +291,12 @@
       READ MORE
     </button>
   </div>
-  <div class="w-1/2 h-1/4 lg:h-full" id="img2"></div>
+  <div class="w-1/2 h-[25vh] lg:h-[80vh] z-0" id="img2"></div>
 </section>
+
+<!-- our happy client -->
 <section
-  class="container mx-auto flex flex-col text-center justify-center items-center relative top-[-20%]"
+  class="container mx-auto flex flex-col text-center justify-center items-center"
 >
   <h1
     class="text-2xl md:text-6xl font-extrabold text-primary text-center my-10"
@@ -300,7 +304,7 @@
     Our Happy Clients!
   </h1>
   <hr class="bg-mygray text-mygray h-1 w-1/6 md:w-1/12 opacity-30" />
-  <div class="my-10 flex flex-row flex-wrap">
+  <div class="my-10 flex flex-row flex-wrap justify-center">
     <div
       class="w-[300px] md:w-[350px] px-10 py-10 my-10 mx-auto md:mx-5 shadow-2xl flex flex-col justify-start text-left"
     >
@@ -309,7 +313,6 @@
         viewBox="0 0 448 512"
         style="width: 60px"
       >
-        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
         <path
           fill="#0e3998"
           d="M0 216C0 149.7 53.7 96 120 96l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72zm256 0c0-66.3 53.7-120 120-120l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72z"
@@ -334,7 +337,6 @@
         viewBox="0 0 448 512"
         style="width: 60px"
       >
-        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
         <path
           fill="#0e3998"
           d="M0 216C0 149.7 53.7 96 120 96l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72zm256 0c0-66.3 53.7-120 120-120l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72z"
@@ -359,7 +361,6 @@
         viewBox="0 0 448 512"
         style="width: 60px"
       >
-        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
         <path
           fill="#0e3998"
           d="M0 216C0 149.7 53.7 96 120 96l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72zm256 0c0-66.3 53.7-120 120-120l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72z"
@@ -377,27 +378,27 @@
       </div>
     </div>
   </div>
-  <section
-    class="container mx-auto text-center flex flex-col items-center justify-between mb-20 relative bottom-[15%] md:bottom-[15%] z-10"
-  >
-    <h1 class="text-3xl md:text-6xl font-extrabold text-primary mb-4">
-      Why Us ?
-    </h1>
-    <hr
-      class="w-12 md:w-24 font-extrabold bg-accent h-[4px] md:h-[6px] mt-4 mb-10 text-accent"
-      size="10"
-    />
-    <img
-      src="../../assets/images/whyus.jpg"
-      alt=""
-      class="w-[300px] h-[100px] md:w-[1000px] md:h-[350px] object-cover"
-    />
-  </section>
 </section>
 
+<!-- why us -->
 <section
-  class="bg-primary w-full relative top-[-30%] md:top-[-40%] z-0 pt-[30%] md:pt-[40%] lg:pt-[20%] pb-20"
+  class="container mx-auto text-center flex flex-col items-center justify-between mb-[-50px] md:mb-[-100px]"
 >
+  <h1 class="text-3xl md:text-6xl font-extrabold text-primary mb-4">
+    Why Us ?
+  </h1>
+  <hr
+    class="w-12 md:w-24 font-extrabold bg-accent h-[4px] md:h-[6px] mt-4 mb-10 text-accent"
+    size="10"
+  />
+  <img
+    src="../../assets/images/whyus.jpg"
+    alt=""
+    class="w-[300px] h-[100px] md:w-[1000px] md:h-[350px] object-cover"
+  />
+</section>
+<!-- why us -->
+<section class="bg-primary w-full relative z-[-1] pb-20 pt-[200px]">
   <section
     class="container mx-auto flex gap-8 items-center justify-center flex-wrap"
   >
@@ -460,6 +461,7 @@
   />
 </section>
 
+<!-- build your dream -->
 <section
   class="flex flex-col justify-center items-center relative top-[-40%] py-24 bg-primary bg-"
   id="img3"
@@ -485,6 +487,7 @@
   </button>
 </section>
 
+<!-- scroller -->
 <section
   class="bg-accent w-full h-1/4 relative top-[-40%] flex justify-center items-center"
 >
@@ -501,4 +504,5 @@
   </div>
 </section>
 
+<!-- footer -->
 <app-footer></app-footer>
