--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,15 +5,10 @@
 ></app-landing-page>
 
 <!-- who we are -->
-<section
-  class="w-full h-[55vh] md:h-[55vh] lg:h-[65vh] xl:h-[60vh] 2xl:h-[80vh] flex flex-row z-0"
->
+<section class="w-full h-[80vh] sm:h-[80vh] flex flex-row z-0 mt-5">
+  <div class="w-1/2 h-1/4 md:h-1/2 lg:h-[100%] z-10" id="img1"></div>
   <div
-    class="w-1/2 h-1/4 md:h-1/2 lg:h-[70%] xl:h-[80%] 2xl:h-[100%] z-10"
-    id="img1"
-  ></div>
-  <div
-    class="container w-[100vw] md:w-[80vw] lg:w-[60vw] mx-auto flex flex-col mt-0 md:mt-10 lg:mt-16 xl:mt-24 2xl:mt-32 z-20 absolute left-0 right-0 px-5 md:px-0"
+    class="container w-[100vw] md:w-[80vw] lg:w-[60vw] mx-auto flex flex-col mt-0 md:mt-20 lg:mt-36 py-16 z-20 absolute left-0 right-0 px-5 md:px-0"
   >
     <h1 class="text-3xl md:text-5xl lg:text-7xl font-extrabold text-primary">
       Who We Are
@@ -67,14 +62,13 @@
       </div>
     </div>
   </div>
-  <div
-    class="w-1/2 h-1/4 md:h-1/2 lg:h-[70%] xl:h-[80%] 2xl:h-[100%] z-10"
-    id="img2"
-  ></div>
+  <div class="w-1/2 h-1/4 md:h-1/2 lg:h-[100%] z-10" id="img2"></div>
 </section>
 
 <!-- staff  -->
-<section class="w-full flex justify-center items-center">
+<section
+  class="w-full flex justify-center items-center mt-[35%] sm:mt-[20%] md:mt-[5%] lg:mt-[18%] xl:mt-[7%] 2xl:mt-[5%]"
+>
   <div
     class="container w-full xl:w-[70vw] mx-auto flex flex-col md:flex-row md:flex-wrap justify-center items-center"
   >
