--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
-<!-- navbar -->
-<!-- landing page -->
+<!--! navbar -->
+<!--! landing page -->
+
 <div class="flex-1 flex-col flex-wrap md:px-0 w-full">
-  <section class="w-full pt-36 px-16 pb-[40%] mb-10" id="main">
+  <section class="w-full pt-36 px-16 pb-[400px] mb-10" id="main">
     <div
       class="max-w-[1280px] mx-auto p-10 flex flex-col justify-center items-center md:items-start"
     >
@@ -26,231 +27,189 @@
       </button>
     </div>
   </section>
-  <section class="w-full px-10">
-    <div
-      class="mx-auto mt-[-100px] sm:mt-[-170px] md:mt-[-250px] lg:mt-[-300px] xl:mt-[-400px] 2xl:mt-[-550px] max-w-[1280px] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 my-32 md:shadow-lg"
-    >
-      <div class="bg-accent w-full min-h-[570px] px-10 py-14 shadow-lg">
-        <h1 class="text-secondary text-3xl font-extrabold">
+</div>
+
+<section class="w-full h-auto p-7 relative z-30">
+  <div class="flex flex-col border-[black] max-w-[1280px] mx-auto mt-[-300px]">
+    <div class="flex flex-col md:flex-row h-auto">
+      <div
+        class="h-[40vh] lg:h-[45vh] xl:h-[54vh] w-[100%] md:w-1/3 bg-accent px-7 py-12 text-[white]"
+      >
+        <h1 class="font-extrabold text-3xl md:text-2xl lg:text-4xl text-wrap">
           Professional and Reliable Services.
         </h1>
-        <hr class="bg-secondary h-1 w-20 text-secondary my-8" />
-        <div class="flex flex-row h-8 justify-between w-2/3">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-            <path
-              fill="#0e3998"
-              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
-            />
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-            <path
-              fill="#0e3998"
-              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
-            />
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-            <path
-              fill="#0e3998"
-              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
-            />
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-            <path
-              fill="#0e3998"
-              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
-            />
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-            <path
-              fill="#0e3998"
-              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
-            />
-          </svg>
+
+        <hr class="bg-[white] text-[white] h-1.5 w-1/6 my-10" />
+        <div class="w-full gap-2 flex">
+          <img
+            class="w-9 h-9 lg:w-10 lg:h-10 cursor-pointer pr-2"
+            src="../../assets/home-icons/facebook-brands-solid.svg"
+            alt=""
+          />
+          <img
+            class="w-9 h-9 lg:w-10 lg:h-10 cursor-pointer pr-2"
+            src="../../assets/home-icons/square-instagram-brands-solid.svg"
+            alt=""
+          />
+          <img
+            class="w-9 h-9 lg:w-10 lg:h-10 cursor-pointer pr-2"
+            src="../../assets/home-icons/square-twitter-brands-solid.svg"
+            alt=""
+          />
+          <img
+            class="w-9 h-9 lg:w-10 lg:h-10 cursor-pointer pr-2"
+            src="../../assets/home-icons/square-share-nodes-solid.svg"
+            alt=""
+          />
+          <img
+            class="w-9 h-9 lg:w-10 lg:h-10 cursor-pointer pr-2"
+            src="../../assets/home-icons/square-share-nodes-solid.svg"
+            alt=""
+          />
         </div>
       </div>
-
       <div
-        class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
-        style="z-index: 0"
+        class="h-[50vh] md:h-[40vh] lg:h-[45vh] xl:h-[54vh] w-[100%] md:w-1/3 bg-[white] hover:bg-secondary ease-in-out duration-200 z-0 p-5 sm:p-10"
       >
         <img
-          ngSrc="../../assets/images/general-construction.jpg"
-          width="400"
+          ngSrc="../../assets/images/gallary/general-contract.jpg"
+          width="200"
           height="200"
           alt=""
-          class="mx-auto mt-8 w-full"
+          class="mx-auto w-[50vw] md:w-full"
         />
         <h1
-          class="text-2xl font-extrabold text-primary my-2"
+          class="text-2xl md:text-lg lg:text-2xl font-extrabold text-primary my-2"
           style="z-index: 0"
         >
           General Contract
         </h1>
         <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
-        <p>
+        <p class="text-[gray] text-sm xl:text-base">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
           repudiandae, eveniet repellat autem, optio natus
         </p>
-        <svg
-          style="width: 20px; margin-top: 20px; margin-bottom: 20px"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512"
-        >
-          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-          <path
-            fill="#0e3998"
-            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
-          />
-        </svg>
+        <img
+          class="w-4 lg:w-6 mt-6"
+          src="../../assets/home-icons/plus-solid.svg"
+          alt=""
+        />
       </div>
-
       <div
-        class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-[#bbbbbb50]"
-        style="z-index: 0"
+        class="h-[50vh] md:h-[40vh] lg:h-[45vh] xl:h-[54vh] w-[100%] md:w-1/3 bg-[white] hover:bg-secondary ease-in-out duration-200 z-0 p-5 sm:p-10"
       >
         <img
-          ngSrc="../../assets/images/project-planning.jpg"
-          width="400"
+          ngSrc="../../assets/images/gallary/project-planning.jpg"
+          width="200"
           height="200"
           alt=""
-          class="mx-auto mt-8 w-full"
+          class="mx-auto w-[50vw] md:w-full"
         />
         <h1
-          class="text-2xl font-extrabold text-primary my-2"
+          class="text-2xl md:text-lg lg:text-2xl font-extrabold text-primary my-2"
           style="z-index: 0"
         >
           Project Planning
         </h1>
         <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
-        <p>
+        <p class="text-[gray] text-sm xl:text-base">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
           repudiandae, eveniet repellat autem, optio natus
         </p>
-        <svg
-          style="width: 20px; margin-top: 20px; margin-bottom: 20px"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512"
-        >
-          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-          <path
-            fill="#0e3998"
-            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
-          />
-        </svg>
+        <img
+          class="w-4 lg:w-6 mt-6"
+          src="../../assets/home-icons/plus-solid.svg"
+          alt=""
+        />
       </div>
-
+    </div>
+    <div class="flex flex-col md:flex-row h-auto mb-14">
       <div
-        class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
-        style="z-index: 0"
+        class="h-[50vh] md:h-[40vh] lg:h-[45vh] xl:h-[54vh] w-[100%] md:w-1/3 bg-[white] hover:bg-secondary ease-in-out duration-200 z-0 p-5 sm:p-10"
       >
         <img
-          ngSrc="../../assets/images/house-refurbishment.jpg"
-          width="400"
+          ngSrc="../../assets/images/gallary/kitchen-remodel.jpg"
+          width="200"
           height="200"
           alt=""
-          class="mx-auto mt-8 w-full"
+          class="mx-auto w-[50vw] md:w-full"
         />
         <h1
-          class="text-2xl font-extrabold text-primary my-2"
+          class="text-2xl md:text-lg lg:text-2xl font-extrabold text-primary my-2"
           style="z-index: 0"
         >
-          House Refurbishment
+          Refurbishment
         </h1>
         <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
-        <p>
+        <p class="text-[gray] text-sm xl:text-base">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
           repudiandae, eveniet repellat autem, optio natus
         </p>
-        <svg
-          style="width: 20px; margin-top: 20px; margin-bottom: 20px"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512"
-        >
-          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-          <path
-            fill="#0e3998"
-            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
-          />
-        </svg>
+        <img
+          class="w-4 lg:w-6 mt-6"
+          src="../../assets/home-icons/plus-solid.svg"
+          alt=""
+        />
       </div>
       <div
-        class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
-        style="z-index: 0"
+        class="h-[50vh] md:h-[40vh] lg:h-[45vh] xl:h-[54vh] w-[100%] md:w-1/3 bg-[white] hover:bg-secondary ease-in-out duration-200 z-0 p-5 sm:p-10"
       >
         <img
-          ngSrc="../../assets/images/kichen-remodeling.jpg"
-          width="400"
+          ngSrc="../../assets/images/gallary/kitchen-remodel.jpg"
+          width="200"
           height="200"
           alt=""
-          class="mx-auto mt-8 w-full"
+          class="mx-auto w-[50vw] md:w-full"
         />
         <h1
-          class="text-2xl font-extrabold text-primary my-2"
+          class="text-2xl md:text-lg lg:text-2xl font-extrabold text-primary my-2"
           style="z-index: 0"
         >
-          Kitchen Remodeling
+          Remodeling
         </h1>
         <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
-        <p>
+        <p class="text-[gray] text-sm xl:text-base">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
           repudiandae, eveniet repellat autem, optio natus
         </p>
-        <svg
-          style="width: 20px; margin-top: 20px; margin-bottom: 20px"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512"
-        >
-          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-          <path
-            fill="#0e3998"
-            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
-          />
-        </svg>
+        <img
+          class="w-4 lg:w-6 mt-6"
+          src="../../assets/home-icons/plus-solid.svg"
+          alt=""
+        />
       </div>
       <div
-        class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-[#bbbbbb50]"
-        style="z-index: 0"
+        class="h-[50vh] md:h-[40vh] lg:h-[45vh] xl:h-[54vh] w-[100%] md:w-1/3 bg-[white] hover:bg-secondary ease-in-out duration-200 z-0 p-5 sm:p-10"
       >
         <img
-          ngSrc="../../assets/images/house-extension.jpg"
-          width="400"
+          ngSrc="../../assets/images/gallary/kitchen-remodel.jpg"
+          width="200"
           height="200"
           alt=""
-          class="mx-auto mt-8 w-full"
+          class="mx-auto w-[50vw] md:w-full"
         />
         <h1
-          class="text-2xl font-extrabold text-primary my-2"
+          class="text-2xl md:text-lg lg:text-2xl font-extrabold text-primary my-2"
           style="z-index: 0"
         >
           House Extensions
         </h1>
         <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
-        <p>
+        <p class="text-[gray] text-sm xl:text-base">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
           repudiandae, eveniet repellat autem, optio natus
         </p>
-        <svg
-          style="width: 20px; margin-top: 20px; margin-bottom: 20px"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512"
-        >
-          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-          <path
-            fill="#0e3998"
-            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
-          />
-        </svg>
+        <img
+          class="w-4 lg:w-6 mt-6"
+          src="../../assets/home-icons/plus-solid.svg"
+          alt=""
+        />
       </div>
     </div>
-  </section>
-</div>
+  </div>
+</section>
 
-<!-- about -->
+<!--! about -->
 <section class="w-full flex h-[60vh] lg:h-auto z-0">
   <div class="w-1/2 h-[25vh] lg:h-[80vh] z-0" id="img1"></div>
   <div
@@ -294,7 +253,7 @@
   <div class="w-1/2 h-[25vh] lg:h-[80vh] z-0" id="img2"></div>
 </section>
 
-<!-- our happy client -->
+<!--! our happy client -->
 <section
   class="container mx-auto flex flex-col text-center justify-center items-center"
 >
@@ -380,7 +339,7 @@
   </div>
 </section>
 
-<!-- why us -->
+<!--! why us -->
 <section
   class="container mx-auto text-center flex flex-col items-center justify-between mb-[-50px] md:mb-[-100px]"
 >
@@ -397,7 +356,7 @@
     class="w-[300px] h-[100px] md:w-[1000px] md:h-[350px] object-cover"
   />
 </section>
-<!-- why us -->
+<!--! why us -->
 <section class="bg-primary w-full relative z-[-1] pb-20 pt-[200px]">
   <section
     class="container mx-auto flex gap-8 items-center justify-center flex-wrap"
@@ -461,7 +420,7 @@
   />
 </section>
 
-<!-- build your dream -->
+<!--! build your dream -->
 <section
   class="flex flex-col justify-center items-center relative top-[-40%] py-24 bg-primary bg-"
   id="img3"
@@ -487,7 +446,7 @@
   </button>
 </section>
 
-<!-- scroller -->
+<!--! scroller -->
 <section
   class="bg-accent w-full h-1/4 relative top-[-40%] flex justify-center items-center"
 >
@@ -504,5 +463,5 @@
   </div>
 </section>
 
-<!-- footer -->
+<!--! footer -->
 <app-footer></app-footer>
