--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -210,7 +210,10 @@
 </section>
 
 <!--! about -->
-<section class="w-full flex h-[60vh] lg:h-auto z-0">
+<section
+  class="w-full flex sm:h-[50vh] md:h-[70vh] lg:h-[80vh] z-0"
+  id="smallScreen"
+>
   <div class="w-1/2 h-[25vh] lg:h-[80vh] z-0" id="img1"></div>
   <div
     class="bg-[transparent] z-20 w-[90vw] lg:w-[70vw] 2xl:w-[50vw] absolute mx-auto left-0 right-0 mr-auto ml-auto flex flex-col justify-start items-center mt-30 py-16"
@@ -226,7 +229,7 @@
       No Job Is to Big for Us. We'll Get It Done.
     </p>
     <p
-      class="text-xs font-semibold md:text-lg lg:text-xl md:font-bold text-mygray leading-loose text-center mb-5"
+      class="text-[10px] sm:text-xs font-semibold md:text-lg lg:text-xl md:font-bold text-mygray leading-loose text-center mb-5"
     >
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -237,7 +240,7 @@
       dolore magna aliqua. Ut enim ad minim veniam,
     </p>
     <p
-      class="text-xs font-semibold md:text-lg lg:text-xl md:font-bold text-mygray leading-loose text-center mb-5"
+      class="text-[10px] sm:text-xs font-semibold md:text-lg lg:text-xl md:font-bold text-mygray leading-loose text-center mb-5"
     >
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
